Fix Popover spacing

--- a/packages/css/src/components/Popover.css
+++ b/packages/css/src/components/Popover.css
@@ -1,30 +1,16 @@
-.Popover {
-  --spaceAround: var(--space-s);
-
+.Popover-wrapper {
+  padding: var(--space-s);
   opacity: 0;
   transition: opacity 0.1s ease-out;
-  padding: var(--space-s) var(--space-m);
-  color: var(--color-white);
-  background-color: rgba(25, 1, 52, 0.8);
-  border-radius: 0.25rem /* 4px */;
 }
 
-.Popover-wrapper:hover + .Popover {
+.Popover-triggerer:hover + .Popover-wrapper {
   opacity: 1;
 }
 
-.Popover--top {
-  margin-bottom: var(--spaceAround);
-}
-
-.Popover--right {
-  margin-left: var(--spaceAround);
-}
-
-.Popover--bottom {
-  margin-top: var(--spaceAround);
-}
-
-.Popover--left {
-  margin-right: var(--spaceAround);
+.Popover {
+  padding: var(--space-s) var(--space-m);
+  color: var(--color-white);
+  background-color: rgba(25, 1, 52, 0.8);
+  border-radius: var(--radius-s);
 }
